k8s/notifications-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
  namespace: podpilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
        - name: notifications-service
          image: podpilot-notifications-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4003
