k8s/tasks-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-service
  namespace: podpilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-service
  template:
    metadata:
      labels:
        app: tasks-service
    spec:
      containers:
        - name: tasks-service
          image: podpilot-tasks-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4002
