k8s/notifications-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
  namespace: podpilot
spec:
  type: ClusterIP
  selector:
    app: notifications-service
  ports:
    - port: 4003
      targetPort: 4003
