k8s/tasks-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-service
  namespace: podpilot
spec:
  type: ClusterIP
  selector:
    app: tasks-service
  ports:
    - port: 4002
      targetPort: 4002
